--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Shifts#index</h1>
-<p>Find me in app/views/shifts/index.html.erb</p>
+<h1>Shifts</h1>
+<% @shifts.each do |shift| %>
+  <p>
+    <% if shift.user %>
+      <%= shift.user.email %>
+    <% else %>
+      <%= link_to "Take this shift", shift_path(shift), method: :patch %>
+    <% end %>
+     <%= shift.start_time %>
+     <%= shift.end_time %>
+    <%= link_to "Delete shift", shift_path(shift), method: :delete, data: {confirm: "Are you sure you would like to delete?"} %>
+  </p>
+<% end %>
+
+<%= link_to "New shift", new_shift_path %>
+
+
