--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -6,8 +6,8 @@
     <% else %>
       <%= link_to "Take this shift", shift_path(shift), method: :patch %>
     <% end %>
-     <%= shift.start_time %>
-     <%= shift.end_time %>
+     <%= shift.formatted_start_time %>
+     <%= shift.formatted_end_time %>
     <%= link_to "Delete shift", shift_path(shift), method: :delete, data: {confirm: "Are you sure you would like to delete?"} %>
   </p>
 <% end %>
