--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar">
   <% if user_signed_in? %>
-      <%= link_to "Home", "#" %>
+      <%= link_to "Home", shifts_path %>
       <%= link_to "Log out", destroy_user_session_path, method: :delete %>
     <% else %>
         <%= link_to "Login", new_user_session_path, class: "nav-link" %>
